<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:contextView="com.pirko.diabetolog.com.pirko.diabetolog.ActivityMain">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="200"
        android:title="@string/action_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_google_drive"
        android:orderInCategory="300"
        android:title="@string/action_google_drive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="400"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>
