<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error"
        android:text="@string/load_error"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarPositiveButtonStyle"
            android:id="@+id/btn_positive"
            android:text="@string/da"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarNegativeButtonStyle"
            android:id="@+id/btn_negative"
            android:text="@string/ne"/>
    </LinearLayout>
</LinearLayout>