<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@drawable/active256"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zahtevano_polje"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_dates"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:enabled="false"
            android:hint="@string/dates"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_add">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_sugar1_add"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/sugar1_req"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal"
            android:id="@+id/edit_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sugar1_edit"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/sugar1"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:buttonBarButtonStyle"
                android:layout_gravity="center"
                android:id="@+id/btn_add"
                android:src="@drawable/add32"
                android:contentDescription="@string/icon_text"/>
        </LinearLayout>
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_sugar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="Показники цукру" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/opiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Опис активності" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_count_oh"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:hint="Кількість ХО"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        style="?android:buttonBarStyle">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_units_insulins"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/units_insulins"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate"
            style="?android:actionButtonStyle"
            android:layout_width="29dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/izračunaj_potreben_insulin"
            android:visibility="invisible" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_end_activei"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:enabled="false"
                android:hint="@string/end_active"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_end_active"
            style="?android:actionButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/koncaj_active" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarNegativeButtonStyle"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:id="@+id/btn_save" />

        <Button
            android:id="@+id/btn_cancel"
            style="?android:buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>