<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_od"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:focusable="false"
                android:hint="@string/settings_od"
                android:layout_weight="1"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_do"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:focusable="false"
                android:hint="@string/settings_do"
                android:layout_weight="1"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle">

        <Button
            android:id="@+id/btn_cancel"
            style="?android:buttonBarPositiveButtonStyle"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:buttonBarNegativeButtonStyle"
            android:layout_gravity="center"
            android:text="@string/ok"
            android:id="@+id/btn_save" />
    </LinearLayout>
</LinearLayout>