<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">
    <android.support.design.widget.TextInputLayout
        android:layout_width="70dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.AutoCompleteTextView
            android:id="@+id/et_od"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:hint="@string/settings_od"
            android:layout_weight="1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="70dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_do"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:focusable="false"
            android:hint="@string/settings_do"
            android:layout_weight="1"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="70dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_value"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:hint="@string/settings_vrednost"
            android:layout_weight="1"/>
    </android.support.design.widget.TextInputLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:src="@drawable/save32"
            android:contentDescription="@string/icon_text"
            android:id="@+id/btn_save"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:visibility="invisible"
            android:src="@drawable/edit32"
            android:contentDescription="@string/icon_text"
            android:id="@+id/btn_edit"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:buttonBarButtonStyle"
            android:layout_toEndOf="@id/btn_edit"
            android:src="@drawable/trash32"
            android:contentDescription="@string/icon_text"
            android:id="@+id/btn_trash"/>
    </RelativeLayout>

</LinearLayout>