<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/eat256"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:scrollIndicators="top">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zahtevano_polje" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_dates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/dates" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_items"
                android:prompt="@string/tip"
                android:spinnerMode="dropdown" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_sugar1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Показник цукру в крові"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="  Назва продукту                 Маса(грам)  ХО" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="374dp"
                android:layout_height="wrap_content">

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linear"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignEnd="@+id/notifi"
                        android:layout_alignRight="@+id/notifi"
                        android:layout_below="@+id/notifi"
                        android:orientation="vertical"></LinearLayout>

                    <Button
                        android:id="@+id/notifi"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="339dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="Додати страву" />

                    <Button
                        android:id="@+id/button3"
                        style="?attr/buttonBarButtonStyle"
                        android:layout_width="339dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/linear"
                        android:text="Порахувати кількість ХО" />

                </LinearLayout>


            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_count_oh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Кількість ХО*"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_units_insulins"
                        android:layout_width="217dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/units_insulins"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_opis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/opiss" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                style="?android:buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    style="?android:buttonBarPositiveButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btn_save"
                    style="?android:buttonBarNegativeButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/ok" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
